Move mobile feed out from menu overlap

--- a/src/App.css
+++ b/src/App.css
@@ -74,5 +74,7 @@ a.item.navHeaders.semanticOverride {
   display: block;
   margin-left: 5vw;
   margin-right: 1vw;
+  top: 10vh;
+  position: fixed;
 }
 
