--- a/src/App.css
+++ b/src/App.css
@@ -77,16 +77,15 @@ a.item.navHeaders.semanticOverride {
   position: fixed;
 }
 
-.mobileProfile {
-  overflow-x: hidden;
-  overflow-y: auto;
-  word-wrap: break-word;
-  display: block;
-  margin-left: 5vw;
-  margin-right: 1vw;
-  top: 10vh;
-  position: fixed;
+button.ui.button.marginCenter, div.marginCenter {
+  margin-left: auto;
+  margin-right: auto;
 }
+
+/* div.marginCenter {
+  margin-left: auto;
+  margin-right: auto;
+} */
 
 .listPage {
   margin-top: 5vh;
