--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ a.item.navHeaders.semanticOverride {
   position: fixed;
 }
 
-button.ui.button.marginCenter, div.marginCenter {
+button.ui.button.marginCenter, div.marginCenter, h1.marginCenter, .marginCenter {
   margin-left: auto;
   margin-right: auto;
 }
